machine epsilon on flow and improvement of performance

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ fixed_diameters
 util_methods/create_graph.py
 util_methods/display_graph.py
 util_methods/old_code.py
+MVN1
+MVN2
+testcases/testcase_blood_flow_iterative_model.py.pclprof
