Final Commit before review

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ util_methods/open_pck_file_dp.py
 data/Final_consideration/CH_Sor
 *.png
 scrath_to_plot_data.py
+*.pdf
+Meeting Protocols - Artemisia [Auto-saved].pdf
